# simplebatterybench

./: .gitignore  README.md  batben.py  devsim.py  pyproject.toml  readme.md
batben/: cli.py  workload.py
src/batben/: battery.py  cli.py  devsim.py  sleep.py  workload.py
src/batben/tasks/: cpu_task.py  workload.py
tests/: test_workload.py
