[project]
name = "batben"
version = "0.1.0"
description = "linux battery benchmark"
readme = "README.md"
authors = [
    { name = "Abdullah Mardini", email = "superppl@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.1",
    "numpy>=2.3.5",
    "psutil>=7.1.3",
    "pydbus>=0.6.0",
]
[project.scripts]
batben = "batben.cli:cli"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]
